tdf#159769: always make sure that default temporary directory exists

This basically undoes commit 4743a32b4f991c57e4b8a66adf035b1808ca793a
(only need to create the folder for temp files once, 2022-05-18). To
avoid the overhead in TempFileFast, it now uses a new function to get
the path, which doesn't check that path exists.

Change-Id: I9c910a55dc4992058a7168690561b02d682b5e56
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163576
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
(cherry picked from commit 0b58f1a41bf8d58426f16e47f86d313172ad4585)
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/163541
Reviewed-by: Michael Stahl <michael.stahl@allotropia.de>